--- a/huffman-app/package.json
+++ b/huffman-app/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "huffman-app": "file:",
     "react": "^19.0.0",
+    "react-d3-tree": "^3.6.2",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.14",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
